[package]
name = "prish"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
futures-util = "0.3.28"
serde = "1.0.163"
serde_derive = "1.0.163"
tokio = { version = "1", features = ["full"] }
tokio-pty = { git = "https://github.com/priware/tokio-pty.git" }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
warp = "0.3"
